side bar now has scrollbar when it overflows, fixed the close button for notices to be placed correctly

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ div#sidebar
   height:100%;
 
   background-color:#222;
+  overflow-y:auto;
 }
 
 div#sidebar>*
@@ -28,6 +29,7 @@ div.notice
 {
   border:1px solid grey;
   padding:2px;
+  position:relative;
 }
 div.notice>a
 {
